# FigVector

./: .gitignore  CONTRIBUTING.md  README.md  codex_work  pyproject.toml
.github/workflows/: ci.yml
datasets/nano_banana/: README.md  manifest.json
docs/: PROJECT_STATUS.md
docs/design/: figvector-poster-philosophy.md
examples/demo/: demo-input.ocr.json  demo-output.drawio  demo-report.json  demo-review.html  nested-demo-input.ocr.json  nested-demo-output.drawio  nested-demo-report.json  nested-demo-review.html
src/figvector/: __init__.py  analysis.py  cli.py  config.py  dataset.py  demo.py  eval.py  export_drawio.py  export_svg.py  models.py  ocr.py  pipeline.py  png.py  relations.py
tests/: test_cli.py  test_pipeline.py  test_png.py
